--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "dan/fixture-handler",
+    "description": "A module to handle fixtures in tests",
     "license": "MIT",
     "type": "library",
     "autoload": {
@@ -16,7 +17,8 @@
         "php": ">=7.1"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "*"
+        "symfony/phpunit-bridge": "*",
+        "dan/backport": "0.0.*@dev"
     },
     "config": {
         "sort-packages": true
@@ -25,5 +27,11 @@
         "branch-alias": {
             "dev-master": "0.0.x-dev"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@bitbucket.org:danielsan-team/backport.git"
+        }
+    ]
 }
